# ihmehimmeli

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  download_mnist.sh  hyperparameters
common/: CMakeLists.txt  data_parallel.cc  file_passthrough.h  file_passthrough_external.cc  file_passthrough_external.h  kahan.h  lambertw.cc  lambertw.h  mnist_loader.cc  mnist_loader.h  test_util.h  util.h
event/: CMakeLists.txt  README.md  adam.h  event.cc  event.h  flipflop_main.cc  loss.cc  loss.h  mnist_main.cc  potential.cc  potential.h  problem.cc  problem.h  repeat_main.cc  runner.cc  runner.h  spike_queue.cc  spike_queue.h
tempcoding/: CMakeLists.txt  data_parallel.cc  data_parallel.h  file_passthrough.h  file_passthrough_external.cc  file_passthrough_external.h  gradient_landscape_helper.cc  gradient_landscape_helper.h  lambertw.cc  lambertw.h  mnist_loader.cc  mnist_loader.h  runner.cc  runner.h  spiking_problem.cc  spiking_problem.h  tempcoder.cc  tempcoder.h  tempcoding_main.cc  util.h
tempcoding/networks/: fast_network  slow_network
